fix deprecation warnings for "new Integer()"